[package]
name = "wasm-lbm"
version = "0.1.0"
authors = ["Chris Snape-Jenkinson"]
edition = "2021"
description = "An implementation of the Lattice Boltzmann method"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "~0.11"
js-sys = "~0.3"
wasm-bindgen = "~0.2"

[dependencies.web-sys]
version = "~0.3"
features = [
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Event",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "ImageData",
    "Window"
]

[profile.release]
lto = true
